--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -1,1 +1,71 @@
-<p>new-page works!</p>
+<h1>
+  Editar / Agregar
+  Héroe
+  <small> Superman </small>
+</h1>
+
+<mat-divider class="mb-2"></mat-divider>
+
+<div class="grid p-2">
+  <div class="col-12 sm:col-6">
+    <mat-card>
+      <mat-card-content>
+
+        <div class="grid">
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Superhéroe</mat-label>
+            <input matInput type="text" placeholder="Superhéroe" required/>
+          </mat-form-field>
+
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Alter ego</mat-label>
+            <input matInput type="text" placeholder="Alter ego" required/>
+          </mat-form-field>
+
+          <mat-form-field class="col-12">
+            <mat-label>Primera aparición</mat-label>
+            <input matInput type="text" placeholder="Primera aparición" required/>
+          </mat-form-field>
+
+          <mat-form-field class="col-12">
+            <mat-label>Personajes</mat-label>
+            <input matInput type="text" placeholder="Personajes" required/>
+          </mat-form-field>
+
+          <mat-form-field class="col-12">
+            <mat-label>Creador</mat-label>
+            <mat-select placeholder="Creador" required>
+              <mat-option *ngFor="let publisher of publishers"
+                [value]="publisher.id">
+                {{ publisher.desc | titlecase }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+
+        <div class="flex justify-content-between">
+          <button mat-button mat-flat-button color="warn">
+            <mat-icon>delete</mat-icon>
+            Borrar
+          </button>
+
+          <button mat-button mat-flat-button color="primary">
+            <mat-icon>save</mat-icon>
+            Guardar
+          </button>
+        </div>
+
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <div class="col-12 sm:col-6">
+    <mat-card>
+      <img mat-card-image
+        src =""
+        alt="img"
+      >
+    </mat-card>
+  </div>
+</div>
