--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -30,7 +30,10 @@
 
     <span class="spacer"></span>
 
-    <button mat-icon-button>
+    <span>{{ user?.email }}</span>
+
+    <button mat-icon-button
+      (click)="onLogout()">
       <mat-icon>logout</mat-icon>
     </button>
 
